# consultant-mcp

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT.md  README.md  REPORT.md  SECURITY.md  package-lock.json  package.json  project.manifest.json  tsconfig.json
.doctrine/: project.json
.github/workflows/: ci.yml  native-build.yml  release.yml  (+1 more)
.review/: fusion-design-review.json
crates/consultant-core/: Cargo.toml
crates/consultant-core/src/: config.rs  engine.rs  lib.rs  mock.rs  openrouter.rs  policy.rs  prompts.rs  types.rs
crates/consultant-core/tests/: consultant_mcp_differential.rs
crates/consultant-mcp-server/: Cargo.toml
crates/consultant-mcp-server/src/: http_transport.rs  lib.rs  main.rs  stdio_transport.rs  tools.rs
docs/: architecture.md  usage.md
examples/: mcp-config.mock.json
scripts/: assemble-multiarch-natives.ts  capture-parity-baseline.mjs  check-native-packaging.sh  check-no-ts-http-backend.sh  check-no-ts-stdio-backend.sh  check-no-ts-tools-backend.sh  check-ts-adapter-deletion-ready.sh  run-consultant-mcp-differential.sh  stage-rust-mcp.ts  sync-platform-versions.ts  verify-multiarch-readback.ts
src/: config.ts  engine.ts  index.ts  policy.ts  prompts.ts  schemas.ts  server.ts  types.ts
test/: check-no-ts-http-backend.test.ts  check-no-ts-stdio-backend.test.ts  check-no-ts-tools-backend.test.ts  differentialHarness.matrix.test.ts  httpTransport.matrix.test.ts  native-packaging.test.ts  parity.test.ts  project-control.node-test.mjs  readmeDiscovery.test.ts  stdioTransport.matrix.test.ts  toolsAuthority.matrix.test.ts  tsAdapterDeletion.matrix.test.ts
verification/: consultant-mcp-cycle50-transport-web-mcp-http-rust-impl.json  consultant-mcp-cycle51-stdio-transport-rust-impl.json  consultant-mcp-cycle62-tools-review-decision-rust-impl.json  consultant-mcp-cycle63-tools-compare-options-rust-impl.json  consultant-mcp-cycle64-tools-research-rust-impl.json  cycle38-consultant-mcp-rust-impl.json
(+28 files in other folders)
