[package]
name = "consultant-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native MCP server for consultant-mcp (rmcp)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "consultant-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
consultant-core = { path = "../consultant-core" }
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }